--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,12 @@ activity-compose = "1.8.2"
 agp = "8.3.2"
 androidx-test-core-ktx = "1.5.0"
 androidx-test-ext-junit = "1.1.5"
+barcode-scanning = "17.2.0"
+camera-core = "1.3.2"
+camera-mlkit-vision = "1.2.0-beta02"
+coil-compose = "2.6.0"
 compose-bom = "2024.04.00"
+converter-gson = "2.9.0"
 core-ktx = "1.12.0"
 dagger-hilt = "2.51.1"
 espresso-core = "3.5.1"
@@ -19,6 +24,7 @@ navigation-compose = "2.7.7"
 opencsv = "5.5.1"
 org-jetbrains-kotlin-android = "1.9.22"
 paparazzi = "1.3.1"
+retrofit = "2.9.0"
 room = "2.6.1"
 test-rules = "1.5.0"
 test-runner = "1.5.2"
@@ -29,6 +35,11 @@ org-jetbrains-kotlin-jvm = "1.9.22"
 
 [libraries]
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
+androidx-camera-camera2 = { module = "androidx.camera:camera-camera2", version.ref = "camera-core" }
+androidx-camera-core = { module = "androidx.camera:camera-core", version.ref = "camera-core" }
+androidx-camera-lifecycle = { module = "androidx.camera:camera-lifecycle", version.ref = "camera-core" }
+androidx-camera-mlkit-vision = { module = "androidx.camera:camera-mlkit-vision", version.ref = "camera-mlkit-vision" }
+androidx-camera-view = { module = "androidx.camera:camera-view", version.ref = "camera-core" }
 androidx-hilt-common = { module = "androidx.hilt:hilt-common", version.ref = "hilt-common" }
 androidx-hilt-work = { module = "androidx.hilt:hilt-work", version.ref = "hilt-common" }
 androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycle-runtime-ktx" }
@@ -43,7 +54,10 @@ androidx-test-rules = { module = "androidx.test:rules", version.ref = "test-rule
 androidx-test-runner = { module = "androidx.test:runner", version.ref = "test-runner" }
 androidx-uiautomator = { module = "androidx.test.uiautomator:uiautomator", version.ref = "uiautomator" }
 androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "work-runtime-ktx" }
+barcode-scanning = { module = "com.google.mlkit:barcode-scanning", version.ref = "barcode-scanning" }
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil-compose" }
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
+converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converter-gson" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 dagger = { module = "com.google.dagger:dagger", version.ref = "dagger-hilt" }
 dagger-compiler = { module = "com.google.dagger:dagger-compiler", version.ref = "dagger-hilt" }
@@ -60,7 +74,9 @@ junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "jun
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "org-jetbrains-kotlin-android" }
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
 material3 = { group = "androidx.compose.material3", name = "material3" }
+material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
 opencsv = { module = "com.opencsv:opencsv", version.ref = "opencsv" }
+retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata" }
 test-core-ktx = { module = "androidx.test:core-ktx", version.ref = "androidx-test-core-ktx" }
 ui = { group = "androidx.compose.ui", name = "ui" }
